unpackaged/main/default/objects/OrderApi__Scheduled_Payment_Line__c/OrderApi__Scheduled_Payment_Line__c.object-meta.xml
<CustomObject>
    <description>Scheduled Payment Lines track the Items associated with Scheduled Payment.</description>
    <label>Scheduled Payment Line</label>
    <nameField>
        <displayFormat>SPL-{000000}</displayFormat>
        <label>Scheduled Payment Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Payment Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>