unpackaged/main/default/objects/OrderApi__Scheduled_Payment_Line__c/fields/OrderApi__Invoice_Line__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Invoice_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the related Invoice Line.</description>
    <inlineHelpText>Link to the related Invoice Line.</inlineHelpText>
    <label>Invoice Line</label>
    <referenceTo>OrderApi__Invoice_Line__c</referenceTo>
    <relationshipLabel>Scheduled Payment Lines</relationshipLabel>
    <relationshipName>Scheduled_Payment_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>