unpackaged/main/default/objects/OrderApi__Scheduled_Payment_Line__c/fields/OrderApi__Is_Renewal__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines the related line that is being used for renewal.</description>
    <inlineHelpText>Defines the related line that is being used for renewal.</inlineHelpText>
    <label>Is Renewal</label>
    <type>Checkbox</type>
</CustomField>