unpackaged/main/default/objects/OrderApi__Scheduled_Payment_Line__c/fields/OrderApi__Is_Tax__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines the Scheduled Payment Line that is being used for tax rate.</description>
    <inlineHelpText>Defines the Scheduled Payment Line that is being used for tax rate.</inlineHelpText>
    <label>Is Tax</label>
    <type>Checkbox</type>
</CustomField>