unpackaged/main/default/objects/OrderApi__Scheduled_Payment_Line__c/fields/OrderApi__Item_Class__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related Item Class</description>
    <inlineHelpText>Link to related Item Class</inlineHelpText>
    <label>Item Class</label>
    <referenceTo>OrderApi__Item_Class__c</referenceTo>
    <relationshipLabel>Scheduled Payment Lines</relationshipLabel>
    <relationshipName>Scheduled_Payment_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>