unpackaged/main/default/objects/OrderApi__Scheduled_Payment_Line__c/fields/OrderApi__List_Price__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__List_Price__c</fullName>
    <description>**System Calculated** The value of the &quot;Price&quot; field for the related Item.</description>
    <formula>OrderApi__Item__r.OrderApi__Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>**System Calculated** The value of the &quot;Price&quot; field for the related Item.</inlineHelpText>
    <label>List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>