unpackaged/main/default/objects/OrderApi__Scheduled_Payment_Line__c/fields/OrderApi__Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Sale_Price__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>**System Calculated/Override** The Sale Price (per unit) for the related Item. Default 0.00.</description>
    <inlineHelpText>**System Calculated/Override** The Sale Price (per unit) for the related Item. Default 0.00.</inlineHelpText>
    <label>Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>