unpackaged/main/default/objects/OrderApi__Scheduled_Payment_Line__c/fields/OrderApi__Scheduled_Payment__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Scheduled_Payment__c</fullName>
    <description>Link to the related Scheduled Payment.</description>
    <inlineHelpText>Link to the related Scheduled Payment.</inlineHelpText>
    <label>Scheduled Payment</label>
    <referenceTo>OrderApi__Scheduled_Payment__c</referenceTo>
    <relationshipLabel>Scheduled Payment Lines</relationshipLabel>
    <relationshipName>Scheduled_Payment_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>