unpackaged/main/default/objects/OrderApi__Scheduled_Payment_Line__c/fields/OrderApi__Scheduled_Payment_Line__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Scheduled_Payment_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to parent Scheduled Payment Line.</description>
    <inlineHelpText>Link to parent Scheduled Payment Line.</inlineHelpText>
    <label>Scheduled Payment Line</label>
    <referenceTo>OrderApi__Scheduled_Payment_Line__c</referenceTo>
    <relationshipLabel>Scheduled Payment Lines</relationshipLabel>
    <relationshipName>Scheduled_Payment_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>