unpackaged/main/default/objects/OrderApi__Scheduled_Payment_Line__c/fields/OrderApi__Subscription__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the Subscription that is being upgraded or renewed.</description>
    <inlineHelpText>Link to the Subscription that is being upgraded or renewed.</inlineHelpText>
    <label>Subscription</label>
    <referenceTo>OrderApi__Subscription__c</referenceTo>
    <relationshipLabel>Scheduled Payment Lines</relationshipLabel>
    <relationshipName>Scheduled_Payment_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>