unpackaged/main/default/objects/OrderApi__Scheduled_Payment_Line__c/fields/OrderApi__Subtotal__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Subtotal__c</fullName>
    <description>**System Calculated** Quantity * Sale Price</description>
    <formula>OrderApi__Quantity__c * OrderApi__Sale_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>**System Calculated** Quantity * Sale Price</inlineHelpText>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>